test/cgip/PP/error/instvars/instvars-16.javaerr20
  Error : Type of assignment expression is not compatible to defined type of ins
tance variable
  act : bool
  exp : nat
